Refactor employee management logic to work with new dtos